--- a/4_store_kollokasjoner.ipynb
+++ b/4_store_kollokasjoner.ipynb
@@ -1676,7 +1676,9 @@
     }
    ],
    "source": [
-    "find_collocations_ny_decade(['Henrik', \"Ibsen\"], norsk_decades, tots)"
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter(\"ignore\", category=FutureWarning)\n",
+    "    find_collocations_ny_decade(['Henrik', \"Ibsen\"], norsk_decades, tots)"
    ]
   },
   {
