--- a/4_store_kollokasjoner.ipynb
+++ b/4_store_kollokasjoner.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,8 @@
     "        try:\n",
     "            colls[key] = dh.Collocations(dct[key], tokens)\n",
     "        except:\n",
-    "            print(key)  \n",
+    "          #  print(key)  \n",
+    "          pass\n",
     "\n",
     "\n",
     "\n",
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,29 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1841-1850\n",
-      "1851-1860\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/larsm/micromamba/envs/utdanningshistorie/lib/python3.11/site-packages/dhlab/api/dhlab_api.py:713: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
-      "  return pd.read_json(r.json())\n",
-      "/home/larsm/micromamba/envs/utdanningshistorie/lib/python3.11/site-packages/dhlab/api/dhlab_api.py:713: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
-      "  return pd.read_json(r.json())\n",
-      "/home/larsm/micromamba/envs/utdanningshistorie/lib/python3.11/site-packages/dhlab/api/dhlab_api.py:713: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
-      "  return pd.read_json(r.json())\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1691,17 +1672,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1841-1850\n",
-      "1851-1860\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -3244,17 +3217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1841-1850\n",
-      "1851-1860\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -4797,17 +4762,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1841-1850\n",
-      "1851-1860\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -6350,17 +6307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1841-1850\n",
-      "1851-1860\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -6539,95 +6488,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>et</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>   <h3>1871-1880</h3><table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Kollokasjonsscore</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>digtet</th>\n",
-       "      <td>3.287959e-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>nordens</th>\n",
-       "      <td>2.426125e-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>forlovede</th>\n",
-       "      <td>2.432676e-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ankomst</th>\n",
-       "      <td>1.167669e-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>2.824009e-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>kom</th>\n",
-       "      <td>1.246609e-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>jeg</th>\n",
-       "      <td>4.620006e-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>og</th>\n",
-       "      <td>3.967832e-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AA</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAA</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAAA</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAAAA</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAAAAA</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAAAAAA</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAAAAAAAA</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAB</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAGAARD</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAGE</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAK</th>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
