--- a/4_store_konkordanser.ipynb
+++ b/4_store_konkordanser.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
